--- a/src/main/webapp/css/estilo.css
+++ b/src/main/webapp/css/estilo.css
@@ -93,3 +93,8 @@ form#datos-user div.panel-footer{
 div.alert{
     text-align: center;
 }
+
+div.thumbnail > img{
+    height: 150px;
+    width: 150px;
+}
